--- a/backend/nginx/conf.d/default.conf
+++ b/backend/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
-upstream app {
-    server frontend:3000;
-}
+# upstream app {
+#     server frontend:3000;
+# }
 server {
     root /var/www/html;
     listen 80;
@@ -8,9 +8,9 @@ server {
 
 
     }
-    location /react {
-        proxy_pass http://app;
-    }
+    # location /react {
+    #     proxy_pass http://app;
+    # }
     location ~* [^/]\.php(/|$) {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
