setting up middlewares

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:alpine
 
 COPY nginx/conf.d /etc/nginx/conf.d
-
+COPY nginx/offend.jpeg /medias/offend.jpeg
 WORKDIR /etc/app
 
 COPY . .
