--- a/backend/nginx/conf.d/default.conf
+++ b/backend/nginx/conf.d/default.conf
@@ -1,16 +1,16 @@
-# upstream app {
-#     server frontend:3000;
-# }
 server {
     root /var/www/html;
     listen 80;
-    location /images {
-
+    index index.php index.html;
+    location ~* \/medias\/.+ {
+        root /;
+        autoindex on;
 
     }
-    # location /react {
-    #     proxy_pass http://app;
-    # }
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+
+    }
     location ~* [^/]\.php(/|$) {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
