routing login and many

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,8 @@
 FROM nginx:alpine
 
 COPY nginx/conf.d /etc/nginx/conf.d
-COPY nginx/offend.jpeg /medias/offend.jpeg
+COPY nginx/fen.jpeg /medias/fen.jpeg
+COPY nginx/adventure.jpeg /medias/adventure.jpeg
 WORKDIR /etc/app
 
 COPY . .
