--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       context: backend/cgi
     volumes:
       - ./backend/src:/var/www/html
+      - medias:/medias
   db:
     image: postgres:alpine
     env_file:
