--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,9 @@
 FROM nginx:alpine
 
 COPY nginx/conf.d /etc/nginx/conf.d
-COPY nginx/fen.jpeg /medias/fen.jpeg
-COPY nginx/adventure.jpeg /medias/adventure.jpeg
+
+COPY nginx /medias
+
 WORKDIR /etc/app
 
 COPY . .
