--- a/backend/nginx/conf.d/default.conf
+++ b/backend/nginx/conf.d/default.conf
@@ -1,6 +1,7 @@
 server {
     root /var/www/html;
     listen 80;
+    client_max_body_size 200M;
     index index.php index.html;
     location ~* \/medias\/.+ {
         root /;
