--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,28 @@
 {
-  "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5501,
+  "sqltools.connections": [
+    {
+      "mysqlOptions": {
+        "authProtocol": "xprotocol"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3306,
+      "driver": "MySQL",
+      "name": "MySql",
+      "database": "db2",
+      "username": "root",
+      "password": "Nuradhussen435"
+    },
+    {
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 5436,
+      "driver": "PostgreSQL",
+      "name": "Docker Db",
+      "database": "myphpdb",
+      "username": "mure_ko",
+      "password": "mypassword123"
+    }
+  ]
 }
