--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,19 +2,6 @@
   "liveServer.settings.port": 5501,
   "sqltools.connections": [
     {
-      "mysqlOptions": {
-        "authProtocol": "xprotocol"
-      },
-      "previewLimit": 50,
-      "server": "localhost",
-      "port": 3306,
-      "driver": "MySQL",
-      "name": "MySql",
-      "database": "db2",
-      "username": "root",
-      "password": "Nuradhussen435"
-    },
-    {
       "previewLimit": 50,
       "server": "localhost",
       "port": 5436,
@@ -23,6 +10,19 @@
       "database": "myphpdb",
       "username": "mure_ko",
       "password": "mypassword123"
+    },
+    {
+      "mysqlOptions": {
+        "authProtocol": "default"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3306,
+      "driver": "MySQL",
+      "name": "Localhost",
+      "database": "mydb",
+      "username": "mure_ko",
+      "password": "hello1234"
     }
   ]
 }
