--- a/backend/nginx/conf.d/default.conf
+++ b/backend/nginx/conf.d/default.conf
@@ -1,4 +1,5 @@
 server {
+    client_header_buffer_size 16k;
     root /var/www/html;
     listen 80;
     client_max_body_size 200M;
@@ -9,6 +10,9 @@ server {
 
     }
     location / {
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
         try_files $uri $uri/ /index.php?$args;
 
     }
